src/objects/SFSCountryDefaultValues__mdt.object
<CustomObject>
    <description>For Field Service setup to map the country with default values</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                    <default>true</default>
                    <label>AUD</label>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricebookId__c</fullName>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>SFS: Country Default Value</label>
    <pluralLabel>SFS: Country Default Values</pluralLabel>
</CustomObject>